# STM32F446RE

./: CMakeLists.txt  README.md  linker_script.ld
src/: dma_timer.c  main.c  syscalls.c  usart.c
